force-app/main/default/objects/ZipImportDetail__c/ZipImportDetail__c.object-meta.xml
<CustomObject>
    <label>Zip Import Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Import Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>