force-app/main/default/objects/ZipImportDetail__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>Org_Unit__c</referenceTo>
    <relationshipLabel>Zip Import Details</relationshipLabel>
    <relationshipName>ZipImportDetails</relationshipName>
    <type>Lookup</type>
</CustomField>