force-app/main/default/objects/ZipImportDetail__c/fields/DistrictKey__c.field-meta.xml
<CustomField>
    <fullName>DistrictKey__c</fullName>
    <formula>Sales_Org__c +&quot; District &quot;+ DistrictNbr__c +&quot;, &quot;+ ZipSegmentName__c</formula>
    <label>District Key</label>
    <type>Text</type>
</CustomField>