force-app/main/default/objects/ZipImportDetail__c/fields/DistrictNbr__c.field-meta.xml
<CustomField>
    <fullName>DistrictNbr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The number of the district</inlineHelpText>
    <label>District Nbr</label>
    <length>8</length>
    <type>Text</type>
</CustomField>