force-app/main/default/objects/ZipImportDetail__c/fields/ImportFieldsOkay__c.field-meta.xml
<CustomField>
    <fullName>ImportFieldsOkay__c</fullName>
    <formula>AND( NOT(ISBLANK( DistrictNbr__c))
    ,NOT(ISBLANK( Sales_Org__c ))
    ,NOT(ISBLANK( Name ))
    ,NOT(ISBLANK( ZipSegmentName__c ))
    ,NOT(ISBLANK( ZipTerritoryName__c ))
   )</formula>
    <inlineHelpText>Was the required information passed in?</inlineHelpText>
    <label>Import Fields Okay</label>
    <type>Checkbox</type>
</CustomField>