force-app/main/default/objects/ZipImportDetail__c/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was this import successful?</inlineHelpText>
    <label>Is Success?</label>
    <type>Checkbox</type>
</CustomField>