force-app/main/default/objects/ZipImportDetail__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is set to true once the record is evaluated</inlineHelpText>
    <label>Processed?</label>
    <type>Checkbox</type>
</CustomField>