force-app/main/default/objects/ZipImportDetail__c/fields/Zip_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Zip_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Assignment</label>
    <referenceTo>Zip_Assignment__c</referenceTo>
    <relationshipLabel>Zip Import Details</relationshipLabel>
    <relationshipName>ZipImportDetails</relationshipName>
    <type>Lookup</type>
</CustomField>