force-app/main/default/objects/ZipImportDetail__c/fields/ZipImport__c.field-meta.xml
<CustomField>
    <fullName>ZipImport__c</fullName>
    <label>Zip Import</label>
    <referenceTo>ZipImport__c</referenceTo>
    <relationshipLabel>Zip Import Details</relationshipLabel>
    <relationshipName>ZipImportDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>