force-app/main/default/objects/ZipImportDetail__c/fields/ZipSegmentName__c.field-meta.xml
<CustomField>
    <fullName>ZipSegmentName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Segment Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>