force-app/main/default/objects/ZipImportDetail__c/fields/ZipTerritory__c.field-meta.xml
<CustomField>
    <fullName>ZipTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Territory</label>
    <referenceTo>ZipTerritory__c</referenceTo>
    <relationshipLabel>Zip Import Details</relationshipLabel>
    <relationshipName>ZipImportDetails</relationshipName>
    <type>Lookup</type>
</CustomField>