force-app/main/default/objects/ZipImportDetail__c/fields/ZipTerritoryName__c.field-meta.xml
<CustomField>
    <fullName>ZipTerritoryName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the territory</inlineHelpText>
    <label>Zip Territory Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>