force-app/main/default/objects/ZipImportDetail__c/fields/ZipTerritoryOld__c.field-meta.xml
<CustomField>
    <fullName>ZipTerritoryOld__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The previous zip territory (before the move).</inlineHelpText>
    <label>Zip Territory Old</label>
    <referenceTo>ZipTerritory__c</referenceTo>
    <relationshipLabel>Zip Import Details-Old</relationshipLabel>
    <relationshipName>ZipImportDetails_Old</relationshipName>
    <type>Lookup</type>
</CustomField>